kubernetes/infra/tracing/stack/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: alloy-otel
  namespace: logging
  annotations:
    argocd.argoproj.io/sync-wave: "-2"
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: alloy-otel
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: moshitoku-scraper
            homelab.craftz.dev/otel-client: "true"
      toPorts:
        - ports:
            - port: "4318"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/name: prometheus
      toPorts:
        - ports:
            - port: "12345"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: logging
            app.kubernetes.io/name: tempo
      toPorts:
        - ports:
            - port: "4317"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: tempo
  namespace: logging
  annotations:
    argocd.argoproj.io/sync-wave: "-2"
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: tempo
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: logging
            app.kubernetes.io/instance: alloy-otel
      toPorts:
        - ports:
            - port: "4317"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/name: grafana
        - matchLabels:
            io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/name: prometheus
      toPorts:
        - ports:
            - port: "3200"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: logging
            app.kubernetes.io/name: minio
      toPorts:
        - ports:
            - port: "9000"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: minio-tracing-access
  namespace: logging
  annotations:
    argocd.argoproj.io/sync-wave: "-2"
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: minio
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: logging
            app.kubernetes.io/name: tempo
        - matchLabels:
            io.kubernetes.pod.namespace: logging
            app.kubernetes.io/name: minio-tempo-bootstrap
      toPorts:
        - ports:
            - port: "9000"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: minio-tempo-bootstrap-egress
  namespace: logging
  annotations:
    argocd.argoproj.io/sync-wave: "-2"
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: minio-tempo-bootstrap
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: logging
            app.kubernetes.io/name: minio
      toPorts:
        - ports:
            - port: "9000"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: tracing-export
  namespace: moshitoku-scraper
  annotations:
    argocd.argoproj.io/sync-wave: "-2"
spec:
  endpointSelector:
    matchLabels:
      homelab.craftz.dev/otel-client: "true"
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: logging
            app.kubernetes.io/instance: alloy-otel
      toPorts:
        - ports:
            - port: "4318"
              protocol: TCP
